# NumericalMethods

./: .gitignore.txt  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/FiniteDifferenceMethods/: CMakeLists.txt  laplaceEquationTest2D.cpp  waveEquationTest.cpp
source/FloatingPoint/: CMakeLists.txt  floatingPointGaps.cpp  machineEps.cpp  roundingAndCutoff.cpp
source/RootFinding/: CMakeLists.txt  findRootBisection.cpp
source/Utils/: vector2d.cpp  vector2d.h
